Fix heading item alignment

--- a/web-ui/src/main/resources/catalog/views/sextant/less/gn_search_sextant.less
+++ b/web-ui/src/main/resources/catalog/views/sextant/less/gn_search_sextant.less
@@ -282,6 +282,9 @@
   }
   .panel-heading {
     background-color: white;
+    .btn-group {
+      margin-top: -2px;
+    }
   }
 
 }
